--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - "${SSH_PORT}:22"  # SSH port mapping (host:container)
     volumes:
       - ./workspace:/home/${USER_NAME}/workspace
-      - ./ssh-keys:/etc/ssh/keys
+      - ./ssh-keys-output:/opt/ssh-keys-output
     deploy:
       resources:
         reservations:
